// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DELETE a shoe remove a non existent shoe 1`] = `200`;

exports[`DELETE a shoe remove a non existent shoe 2`] = `
Object {
  "data": Object {
    "ShoeID": "4",
  },
  "success": true,
}
`;

exports[`DELETE a shoe remove a non existent shoe 3`] = `200`;

exports[`DELETE a shoe remove a non existent shoe 4`] = `
Object {
  "empty": true,
  "success": true,
}
`;

exports[`DELETE a shoe remove a shoe 1`] = `200`;

exports[`DELETE a shoe remove a shoe 2`] = `
Object {
  "data": Object {
    "ShoeID": "1",
  },
  "success": true,
}
`;

exports[`DELETE a shoe remove a shoe 3`] = `200`;

exports[`DELETE a shoe remove a shoe 4`] = `
Object {
  "empty": true,
  "success": true,
}
`;

exports[`GET all shoes gets all shoes 1`] = `200`;

exports[`GET all shoes gets all shoes 2`] = `
Object {
  "data": Array [
    Object {
      "Brand": "nike",
      "Collection": "hypes",
      "ID": 1,
      "Section": "mens",
      "Stars": 3.5,
      "Style": "basketball",
      "colours": Array [
        Object {
          "colour": "red",
          "hex": "ff0000",
        },
        Object {
          "colour": "blue",
          "hex": "0000ff",
        },
      ],
      "description": "run",
      "name": "airss",
      "price": 40,
      "releaseDate": 2938457,
    },
    Object {
      "Brand": "adias",
      "Collection": "air max",
      "ID": 2,
      "Section": "mens",
      "Stars": 2,
      "Style": "basketball",
      "colours": Array [
        Object {
          "colour": "green",
          "hex": "00ff00",
        },
      ],
      "description": "dive",
      "name": "jumpers",
      "price": 80,
      "releaseDate": 2098475298,
    },
    Object {
      "Brand": "adias",
      "Collection": "air max",
      "ID": 3,
      "Section": "womens",
      "Stars": 0,
      "Style": "runners",
      "colours": Array [],
      "description": "sprint",
      "name": "kicks",
      "price": 120,
      "releaseDate": 2098475234,
    },
  ],
  "success": true,
}
`;

exports[`GET all shoes with brand nike and stars over 3 1`] = `200`;

exports[`GET all shoes with brand nike and stars over 3 2`] = `
Object {
  "data": Array [
    Object {
      "Brand": "nike",
      "Collection": "hypes",
      "ID": 1,
      "Section": "mens",
      "Stars": 3.5,
      "Style": "basketball",
      "colours": Array [
        Object {
          "colour": "red",
          "hex": "ff0000",
        },
        Object {
          "colour": "blue",
          "hex": "0000ff",
        },
      ],
      "description": "run",
      "name": "airss",
      "price": 40,
      "releaseDate": 2938457,
    },
  ],
  "success": true,
}
`;

exports[`GET all shoes with brand of nike 1`] = `200`;

exports[`GET all shoes with brand of nike 2`] = `
Object {
  "data": Array [
    Object {
      "Brand": "nike",
      "Collection": "hypes",
      "ID": 1,
      "Section": "mens",
      "Stars": 3.5,
      "Style": "basketball",
      "colours": Array [
        Object {
          "colour": "red",
          "hex": "ff0000",
        },
        Object {
          "colour": "blue",
          "hex": "0000ff",
        },
      ],
      "description": "run",
      "name": "airss",
      "price": 40,
      "releaseDate": 2938457,
    },
  ],
  "success": true,
}
`;

exports[`GET all shoes with brand of nike and style of basketball 1`] = `200`;

exports[`GET all shoes with brand of nike and style of basketball 2`] = `
Object {
  "data": Array [
    Object {
      "Brand": "nike",
      "Collection": "hypes",
      "ID": 1,
      "Section": "mens",
      "Stars": 3.5,
      "Style": "basketball",
      "colours": Array [
        Object {
          "colour": "red",
          "hex": "ff0000",
        },
        Object {
          "colour": "blue",
          "hex": "0000ff",
        },
      ],
      "description": "run",
      "name": "airss",
      "price": 40,
      "releaseDate": 2938457,
    },
  ],
  "success": true,
}
`;

exports[`GET all shoes with collection of hypes 1`] = `200`;

exports[`GET all shoes with collection of hypes 2`] = `
Object {
  "data": Array [
    Object {
      "Brand": "nike",
      "Collection": "hypes",
      "ID": 1,
      "Section": "mens",
      "Stars": 3.5,
      "Style": "basketball",
      "colours": Array [
        Object {
          "colour": "red",
          "hex": "ff0000",
        },
        Object {
          "colour": "blue",
          "hex": "0000ff",
        },
      ],
      "description": "run",
      "name": "airss",
      "price": 40,
      "releaseDate": 2938457,
    },
  ],
  "success": true,
}
`;

exports[`GET all shoes with non existent brand 1`] = `200`;

exports[`GET all shoes with non existent brand 2`] = `
Object {
  "data": Array [],
  "empty": true,
  "success": true,
}
`;

exports[`GET all shoes with section of mens 1`] = `200`;

exports[`GET all shoes with section of mens 2`] = `
Object {
  "data": Array [
    Object {
      "Brand": "nike",
      "Collection": "hypes",
      "ID": 1,
      "Section": "mens",
      "Stars": 3.5,
      "Style": "basketball",
      "colours": Array [
        Object {
          "colour": "red",
          "hex": "ff0000",
        },
        Object {
          "colour": "blue",
          "hex": "0000ff",
        },
      ],
      "description": "run",
      "name": "airss",
      "price": 40,
      "releaseDate": 2938457,
    },
    Object {
      "Brand": "adias",
      "Collection": "air max",
      "ID": 2,
      "Section": "mens",
      "Stars": 2,
      "Style": "basketball",
      "colours": Array [
        Object {
          "colour": "green",
          "hex": "00ff00",
        },
      ],
      "description": "dive",
      "name": "jumpers",
      "price": 80,
      "releaseDate": 2098475298,
    },
  ],
  "success": true,
}
`;

exports[`GET all shoes with section of mens and collection of hypes 1`] = `200`;

exports[`GET all shoes with section of mens and collection of hypes 2`] = `
Object {
  "data": Array [
    Object {
      "Brand": "nike",
      "Collection": "hypes",
      "ID": 1,
      "Section": "mens",
      "Stars": 3.5,
      "Style": "basketball",
      "colours": Array [
        Object {
          "colour": "red",
          "hex": "ff0000",
        },
        Object {
          "colour": "blue",
          "hex": "0000ff",
        },
      ],
      "description": "run",
      "name": "airss",
      "price": 40,
      "releaseDate": 2938457,
    },
  ],
  "success": true,
}
`;

exports[`GET all shoes with stars over 3 1`] = `200`;

exports[`GET all shoes with stars over 3 2`] = `
Object {
  "data": Array [
    Object {
      "Brand": "nike",
      "Collection": "hypes",
      "ID": 1,
      "Section": "mens",
      "Stars": 3.5,
      "Style": "basketball",
      "colours": Array [
        Object {
          "colour": "red",
          "hex": "ff0000",
        },
        Object {
          "colour": "blue",
          "hex": "0000ff",
        },
      ],
      "description": "run",
      "name": "airss",
      "price": 40,
      "releaseDate": 2938457,
    },
  ],
  "success": true,
}
`;

exports[`GET all shoes with style of basketball 1`] = `200`;

exports[`GET all shoes with style of basketball 2`] = `
Object {
  "data": Array [
    Object {
      "Brand": "nike",
      "Collection": "hypes",
      "ID": 1,
      "Section": "mens",
      "Stars": 3.5,
      "Style": "basketball",
      "colours": Array [
        Object {
          "colour": "red",
          "hex": "ff0000",
        },
        Object {
          "colour": "blue",
          "hex": "0000ff",
        },
      ],
      "description": "run",
      "name": "airss",
      "price": 40,
      "releaseDate": 2938457,
    },
    Object {
      "Brand": "adias",
      "Collection": "air max",
      "ID": 2,
      "Section": "mens",
      "Stars": 2,
      "Style": "basketball",
      "colours": Array [
        Object {
          "colour": "green",
          "hex": "00ff00",
        },
      ],
      "description": "dive",
      "name": "jumpers",
      "price": 80,
      "releaseDate": 2098475298,
    },
  ],
  "success": true,
}
`;

exports[`GET single shoe get shoe with id 1 1`] = `200`;

exports[`GET single shoe get shoe with id 1 2`] = `
Object {
  "data": Object {
    "Brand": "nike",
    "Collection": "hypes",
    "ID": 1,
    "Section": "mens",
    "Stars": 3.5,
    "Style": "basketball",
    "description": "run",
    "name": "airss",
    "price": 40,
    "releaseDate": 2938457,
  },
  "success": true,
}
`;

exports[`GET single shoe get shoe with id 2 1`] = `200`;

exports[`GET single shoe get shoe with id 2 2`] = `
Object {
  "data": Object {
    "Brand": "adias",
    "Collection": "air max",
    "ID": 2,
    "Section": "mens",
    "Stars": 2,
    "Style": "basketball",
    "description": "dive",
    "name": "jumpers",
    "price": 80,
    "releaseDate": 2098475298,
  },
  "success": true,
}
`;

exports[`GET single shoe get shoe with id 3 1`] = `200`;

exports[`GET single shoe get shoe with id 3 2`] = `
Object {
  "data": Object {
    "Brand": "adias",
    "Collection": "air max",
    "ID": 3,
    "Section": "womens",
    "Stars": 0,
    "Style": "runners",
    "description": "sprint",
    "name": "kicks",
    "price": 120,
    "releaseDate": 2098475234,
  },
  "success": true,
}
`;

exports[`GET single shoe get shoe with id 4 1`] = `200`;

exports[`GET single shoe get shoe with id 4 2`] = `
Object {
  "empty": true,
  "success": true,
}
`;

exports[`PATCH (update) a shoe 1 item updated 1`] = `200`;

exports[`PATCH (update) a shoe 1 item updated 2`] = `
Object {
  "data": Object {
    "ShoeID": "1",
    "name": "fly kicks",
  },
  "success": true,
}
`;

exports[`PATCH (update) a shoe 1 item updated 3`] = `200`;

exports[`PATCH (update) a shoe 1 item updated 4`] = `
Object {
  "data": Object {
    "Brand": "nike",
    "Collection": "hypes",
    "ID": 1,
    "Section": "mens",
    "Stars": 3.5,
    "Style": "basketball",
    "description": "run",
    "name": "fly kicks",
    "price": 40,
    "releaseDate": 2938457,
  },
  "success": true,
}
`;

exports[`PATCH (update) a shoe 3 items updated 1`] = `200`;

exports[`PATCH (update) a shoe 3 items updated 2`] = `
Object {
  "data": Object {
    "ShoeID": "3",
    "description": "runs fast",
    "name": "test shoe",
    "price": 50,
  },
  "success": true,
}
`;

exports[`PATCH (update) a shoe 3 items updated 3`] = `200`;

exports[`PATCH (update) a shoe 3 items updated 4`] = `
Object {
  "data": Object {
    "Brand": "adias",
    "Collection": "air max",
    "ID": 3,
    "Section": "womens",
    "Stars": 0,
    "Style": "runners",
    "description": "runs fast",
    "name": "test shoe",
    "price": 50,
    "releaseDate": 2098475234,
  },
  "success": true,
}
`;

exports[`PATCH (update) a shoe no data 1`] = `500`;

exports[`PATCH (update) a shoe no data 2`] = `
Object {
  "error": true,
  "message": "no data sent",
}
`;

exports[`Post add shoe no cover image 1`] = `200`;

exports[`Post add shoe no cover image 2`] = `
Object {
  "data": Object {
    "BrandID": 2,
    "CollectionID": 1,
    "CoverImage": null,
    "SectionID": 1,
    "StyleID": 1,
    "description": "runs fast",
    "name": "test shoe",
    "price": 50,
    "releaseDate": 29456887,
  },
  "success": true,
}
`;

exports[`Post add shoe no cover image 3`] = `200`;

exports[`Post add shoe no cover image 4`] = `
Object {
  "data": Array [
    Object {
      "Brand": "adias",
      "Collection": "air max",
      "ID": 4,
      "Section": "mens",
      "Stars": 0,
      "Style": "runners",
      "colours": Array [],
      "description": "runs fast",
      "name": "test shoe",
      "price": 50,
      "releaseDate": 29456887,
    },
  ],
  "success": true,
}
`;

exports[`Post add shoe no data 1`] = `500`;

exports[`Post add shoe no data 2`] = `
Object {
  "error": true,
  "message": "no data sent",
}
`;

exports[`Post add shoe perfect amount of data 1`] = `200`;

exports[`Post add shoe perfect amount of data 2`] = `
Object {
  "data": Object {
    "BrandID": 2,
    "CollectionID": 1,
    "CoverImage": 1,
    "SectionID": 1,
    "StyleID": 1,
    "description": "runs fast",
    "name": "test shoe",
    "price": 50,
    "releaseDate": 29456887,
  },
  "success": true,
}
`;

exports[`Post add shoe perfect amount of data 3`] = `200`;

exports[`Post add shoe perfect amount of data 4`] = `
Object {
  "data": Array [
    Object {
      "Brand": "adias",
      "Collection": "air max",
      "ID": 4,
      "Section": "mens",
      "Stars": 0,
      "Style": "runners",
      "colours": Array [],
      "description": "runs fast",
      "name": "test shoe",
      "price": 50,
      "releaseDate": 29456887,
    },
  ],
  "success": true,
}
`;
